Fix: Add tag when the target wiki does not support

--- a/static/wikimirror.css
+++ b/static/wikimirror.css
@@ -1,5 +1,6 @@
 /**
  * WikiMirror - A Wikimedia Projects Reverse Proxy based on Nginx
+ *
  * Copyright (c) 2019-present, 安忆.
  *
  * @author 安忆 <i@anyi.in>
